# bujo

./: .gitignore  Cargo.toml  Makefile  README.md  data.json
src/: app.rs  config.rs  data.rs  display.rs  entry.rs  main.rs  main_tui.rs  views.rs
