[package]
name = "bujo"
version = "0.0.1"
authors = ["Daniel Correia <dan.reia@gmail.com>"]
edition = "2018"
description = "A Command Line Interface (CLI) application of the Bullet Journal Method"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = "2.33.3"
home = "0.5.3"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
terminal_size = "0.1.17"
chrono = "0.4.19"
